Bug 385702 - System Monitor does not have an icon under wayland
Summary: System Monitor does not have an icon under wayland
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Monitor widgets (other bugs)
Version First Reported In: 5.10.5
Platform: Other Linux
: NOR minor
Target Milestone: 1.0
Assignee: Andrius Štikonas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-10-13 14:32 UTC by Andrius Štikonas
Modified: 2017-10-14 02:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrius Štikonas 2017-10-13 14:32:49 UTC
systemmontor is showing a generic Wayland icon. It's resourceName is systemmonitor but there is no corresponding desktop file, so no Icon is shown.

Under X11 it shows the same icon as ksysguard.
Comment 1 David Edmundson 2017-10-13 16:50:52 UTC
Then create a new .desktop file and set NoDisplay=true so it doesn't appear in menus.

Can you take care of that?
Comment 2 Andrius Štikonas 2017-10-13 16:52:12 UTC
Yeah, no problem. I'll do it.
Comment 3 Andrius Štikonas 2017-10-14 02:15:01 UTC
Git commit 97a88917a546c426be73e6bff0b248135aca7033 by Andrius Štikonas.
Committed on 14/10/2017 at 02:13.
Pushed by stikonas into branch 'master'.

systemmonitor: Add a desktop file.

M  +1    -0    systemmonitor/CMakeLists.txt
M  +3    -0    systemmonitor/main.cpp
A  +6    -0    systemmonitor/org.kde.systemmonitor.desktop

https://commits.kde.org/plasma-workspace/97a88917a546c426be73e6bff0b248135aca7033