systemmonitor: Add a desktop file.

BUG: 385702